--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,6 +12,13 @@
         Vous êtes administrateur !
         {% endif %}
 
+        {% if app.user %}
+        <strong>  {{ app.user.pseudo}} </strong>
+        <strong>  {{ app.user.pseudo}} </strong>
+        <strong>  {{ app.user.pseudo}} </strong>
+
+        {% endif %}
+
 
     </div>
 {% endblock %}
