--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,9 +23,17 @@
                 <div class="field">
                     <label class="label" for="inputEmail">Email</label>
                     <div class="control">
-                        <input class="input" type="email" value="{{ last_username }}" name="email" id="inputEmail" required autofocus>
+                        <input class="input" type="email" value="{{ last_username }}" name="email" id="inputEmail" autofocus>
                     </div>
                 </div>
+
+                <div class="field">
+                    <label class="label" for="inputPseudo">Pseudo</label>
+                    <div class="control">
+                        <input class="input" type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" autofocus>
+                    </div>
+                </div>
+
                 <div class="field">
                     <label class="label" for="inputPassword">Mot de passe</label>
                     <div class="control">
