--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,16 +21,9 @@
             {# formulaire de connexion #}
             <form method="post">
                 <div class="field">
-                    <label class="label" for="inputEmail">Email</label>
+                    <label class="label" for="inputEmail">Email ou Pseudo</label>
                     <div class="control">
-                        <input class="input" type="email" value="{{ last_username }}" name="email" id="inputEmail" autofocus>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label" for="inputPseudo">Pseudo</label>
-                    <div class="control">
-                        <input class="input" type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" autofocus>
+                        <input class="input" type="text" value="{{ last_username }}" name="username"  autofocus>
                     </div>
                 </div>
 
