Commencement de la page Profil pour les user connectés

--- a/templates/artists/list.html.twig
+++ b/templates/artists/list.html.twig
@@ -52,18 +52,18 @@
                     </div>
                 </div>
                 {% else %}
-
-    <div class="column is-full">
-        <section class="hero is-warning">
-            <div class="container">
-                <h3 class="title">
-                Aucun résultat pour votre recherche !
-                </h3>
-            </div>
-        </section>
-    </div>
-
-
+                    <div class="column is-full">
+                        <section class="hero is-warning">
+                            <div class="hero-body">
+                                <div class="container">
+                                    <h3 class="title">
+                                        <i class="far fa-frown"></i>&nbsp;
+                                        Aucun résultat pour votre recherche !
+                                    </h3>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
             {% endfor %}
         </div>
     </div>
